final change for project 2

--- a/src/stylesheets/main.scss
+++ b/src/stylesheets/main.scss
@@ -4,3 +4,15 @@
 
 
 
+nav {
+    display: flex;
+  }
+
+h1 {
+    font-size: 100px;
+}
+body, html {
+  height: 100%;
+  margin: 0;
+  font-family:'Times New Roman', Times, serif
+}
